--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 										<span class="date">February 2022 - June 2022</span>
 										<h2>Robotics</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/robotics.jpg" alt="" /></a>
+									<a class="image fit"><img src="images/robotics.jpg" alt="" /></a>
 									<p>The Robotics project focused on developing a robotic hand controlled via computer vision, integrating machine learning and image processing.
 										 A novel approach was proposed to improve the efficiency of vision-based finger motion control. 
 										The work has been submitted for a patent and is set for publication as a research article.</p>
