--- a/AITrainingSpecialist.html
+++ b/AITrainingSpecialist.html
@@ -42,7 +42,7 @@
 								<header class="major">
 									<span class="date">October 2024 - Ongoing</span>
 									<h1>AI Training Specialist</h1>
-									<p>As an AI Training Specialist at <a href = "https://outlier.ai/" target="_blank">Outlier.ai</a> I train AI models using Reinforcement Learning from Human Feedback (RLHF) to enhance decision-making and accuracy.
+									<p>As an AI Training Specialist at <a href = "https://outlier.ai/" target="_blank">Outlier.ai</a> I train AI models using Reinforced Learning with Human Feedback (RLHF) to enhance decision-making and accuracy.
 										My role involves reviewing, optimizing, and improving code in Python, C, C++, and SQL,
 										with a focus on efficiency, error-free implementation, and maintainability.</p>
 								</header>
@@ -79,7 +79,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; B7SJ</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; B7SJ</li><li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
