--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Haider Khalaf</a>
+						<a href="index" class="logo">Haider Khalaf</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects & Work Experience</a></li>
+							<li class="active"><a href="index">Projects & Work Experience</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/haider-khalaf/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">fa-linkedIn</span></a></li>
@@ -61,7 +61,7 @@
 								</header>
 								<a class="image main"><img src="images/ai-training.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="AITrainingSpecialist.html" class="button large">View</a></li>
+									<li><a href="AITrainingSpecialist" class="button large">View</a></li>
 								</ul>
 							</article>
 
@@ -77,7 +77,7 @@
 										By integrating IoT devices and machine learning models, it collects, analyzes, and responds to data, ensuring personalized and adaptive solutions that enhance the safety and well-being of elderly individuals.<br />
 										The system leverages advanced positioning algorithms and intuitive dashboards to provide seamless visualization and actionable insights, making it a robust tool for improving quality of life in geriatric settings.</p>
 								<ul class="actions special">
-										<li><a href="SMARTAGE.html" class="button">View Project</a></li>
+										<li><a href="SMARTAGE" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -90,7 +90,7 @@
 										It features a scalable back-end for efficient processing and an interactive front-end for user-friendly input and visualization, 
 										delivering accurate and intuitive summarization results.</p>
 									<ul class="actions special">
-										<li><a href="TurkishTextSummarizer.html" class="button">View Project</a></li>
+										<li><a href="TurkishTextSummarizer" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -103,7 +103,7 @@
 										It included developing an automated sorting algorithm, enabling real-time object detection and tracking in videos, and building 
 										a comprehensive end-to-end analysis pipeline optimized for accuracy and efficiency across diverse scenarios.</p>
 									<ul class="actions special">
-										<li><a href="ImageProcessing.html" class="button">View Project</a></li>
+										<li><a href="ImageProcessing" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -116,7 +116,7 @@
 										 A novel approach was proposed to improve the efficiency of vision-based finger motion control. 
 										The work has been submitted for a patent and is set for publication as a research article.</p>
 									<ul class="actions special">
-										<li><a href="Robotics.html" class="button">View Project</a></li>
+										<li><a href="Robotics" class="button">View Project</a></li>
 									</ul>
 								</article>
 												</section>
