--- a/Robotics.html
+++ b/Robotics.html
@@ -24,13 +24,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Haider Khalaf</a>
+						<a href="index" class="logo">Haider Khalaf</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Projects & Work Experience</a></li>
+							<li><a href="index">Projects & Work Experience</a></li>
 
 						</ul>
 						<ul class="icons">
