--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<span class="date">October 2024 - Ongoing</span>
 									<h2>AI Training Specialist</h2>
 									<p>As an AI Training Specialist at Outlier.ai, I train AI models using Reinforced Learning with Human Feedback (RLHF) to enhance decision-making and accuracy.
-										 My role involves reviewing, optimizing, and improving code in Python, C, C++, and SQL,
+										 My role involves reviewing, optimizing, and improving code in Python, C, C++, Java, Javascript, and SQL,
 										 with a focus on efficiency, error-free implementation, and maintainability.</p>
 								</header>
 								<a class="image main"><img src="images/ai-training.jpg" alt="" /></a>
