--- a/AITrainingSpecialist.html
+++ b/AITrainingSpecialist.html
@@ -48,14 +48,14 @@
 									<span class="date">October 2024 - Ongoing</span>
 									<h1>AI Training Specialist</h1>
 									<p>As an AI Training Specialist at <a href = "https://outlier.ai/" target="_blank">Outlier.ai</a> I train AI models using Reinforced Learning with Human Feedback (RLHF) to enhance decision-making and accuracy.
-										My role involves reviewing, optimizing, and improving code in Python, C, C++, and SQL,
+										My role involves reviewing, optimizing, and improving code in Python, C, C++, Java, Javascript, and SQL,
 										with a focus on efficiency, error-free implementation, and maintainability.</p>
 								</header>
 								<div class="image main"><img src="images/ai-training.jpg" alt="" /></div>
 								<p>I work flexible hours from home, allowing me to balance this role alongside my professional and personal commitments. This opportunity serves as a platform to enhance my code review skills while gaining valuable hands-on experience in AI development and optimization. 
 									My role involves training AI models using Reinforcement Learning from Human Feedback (RLHF), a process aimed at improving decision-making capabilities and model accuracy by aligning outputs with human preferences and feedback. <br />
 
-									A significant part of my responsibilities includes reviewing, debugging, and optimizing code across multiple programming languages, particularly Python, C, C++, and SQL. I focus on identifying inefficiencies, ensuring clean, error-free implementations, and delivering enhanced versions of the code that are optimized for performance, maintainability, and scalability. 
+									A significant part of my responsibilities includes reviewing, debugging, and optimizing code across multiple programming languages, particularly Python, C, C++, Java, Javascript, and SQL. I focus on identifying inefficiencies, ensuring clean, error-free implementations, and delivering enhanced versions of the code that are optimized for performance, maintainability, and scalability. 
 									This requires strong analytical skills, precision, and a deep understanding of algorithms and software development practices. <br />
 									
 									Working remotely in a flexible environment has not only strengthened my time management and self-discipline but also allowed me to approach challenges with a more focused and creative mindset. By participating in this role, I have improved my attention to detail, deepened my expertise in various programming paradigms, and contributed to building reliable, high-performing AI systems. 
