--- a/SMARTAGE.html
+++ b/SMARTAGE.html
@@ -61,7 +61,7 @@
 									
 									I was also responsible for the design and development of interactive dashboards using Turtle Graphics, which provided a user-friendly visualization of the data collected by the system. 
 									These dashboards offered actionable insights, making it easier for caregivers to monitor the environment and take proactive actions based on the data. This project allowed me to work on cutting-edge technologies, including UWB and machine learning, while contributing to a solution with significant social impact in geriatric care.<br />
-									Here's a <a href="https://www.linkedin.com/posts/isibor-kennedy-ihianle-phd-mbcs-fhea-769a288_activityrecognition-ai-ntu-ugcPost-7205867165407703040-5HeN?utm_source=share&utm_medium=member_desktop" target="_blank">demo</a> that was shared on LinkedIn showing the Early stages of the project</a>.
+									Here's a <a href="https://www.linkedin.com/posts/isibor-kennedy-ihianle-phd-mbcs-fhea-769a288_activityrecognition-ai-ntu-ugcPost-7205867165407703040-5HeN?utm_source=share&utm_medium=member_desktop" target="_blank"><b>demo</b></a> that was shared on LinkedIn showing the Early stages of the project</a>.
 									
 								</p>
 							</section>
