--- a/TurkishTextSummarizer.html
+++ b/TurkishTextSummarizer.html
@@ -61,7 +61,9 @@
 									
 									The project was built as a full-stack application, connecting the backend processing with the frontend interface seamlessly, ensuring a smooth and intuitive user experience. By focusing on user-centric design, 
 									I ensured the system was easy to navigate, making it accessible for users with varying technical expertise. This project not only honed my skills in NLP and full-stack development but also deepened my understanding of how to create useful, 
-									real-world applications with advanced text-processing techniques.</p>
+									real-world applications with advanced text-processing techniques.<br\>
+									Here's the link for the project's <a href="https://github.com/B7SJuba/TurkishTextSummarizer" target="_blank"><b>github repository</b></a>.
+								</p>
 							</section>
 
 					</div>
