--- a/Robotics.html
+++ b/Robotics.html
@@ -64,10 +64,20 @@
 									
 									The project led to a patent application submission and we are currently preparing a research article for publication. This experience provided me with valuable hands-on exposure to robotics,
 									 servo control, Arduino programming, and machine learning, while enhancing my teamwork, problem-solving, and practical application skills in a multidisciplinary setting.<br \>
-									Here are some videos of the project: <a href="https://www.youtube.com/watch?v=87DKZ6mHQSA" target="_blank"> Demo 1</a> ,
-									<a href="https://www.youtube.com/watch?v=py64qXxQUnw", target="_blank">Demo 2</a>.
+									Here are some videos of the project: <a href="https://www.youtube.com/watch?v=87DKZ6mHQSA" target="_blank"><b>Demo 1</b></a> ,
+									<a href="https://www.youtube.com/watch?v=py64qXxQUnw", target="_blank"><b>Demo 2</b></a>.
 
 									 </p>
+								<p>In addition to the project development, our research paper on this work was presented at ISB JSB Fukuoka 2023, 
+									detailing our advancements in vision-based robotic hand control. Below is a snapshot of the published paper.	
+								</p>
+								<div class="image main"><img src="Research/Robotics/RoboticsResearch.png" alt=""/></div>
+								<p>
+									This is the research paper we presented at ISB JSB Fukuoka 2023, where we introduced our approach to robotic hand control using computer vision and machine learning. 
+									More papers related to this project will be shared in the future. Since the official event proceedings are not currently available online,
+									you can view the full collection of published papers from the conference <a href="Research/Robotics/ISB_JSB2023_Program_Abstract_Book" target="_blank"><b>here</b></a>.
+								</p>
+									
 							</section>
 
 					</div>
