--- a/Robotics.html
+++ b/Robotics.html
@@ -75,7 +75,7 @@
 								<p>
 									This is the research paper we presented at ISB JSB Fukuoka 2023, where we introduced our approach to robotic hand control using computer vision and machine learning. 
 									More papers related to this project will be shared in the future. Since the official event proceedings are not currently available online,
-									you can view the full collection of published papers from the conference <a href="Research/Robotics/ISB_JSB2023_Program_Abstract_Book" target="_blank"><b>here</b></a>.
+									you can view the full collection of published papers from the conference <a href="Research/Robotics/ISB_JSB2023_Program_Abstract_Book.pdf" target="_blank"><b>here</b></a>.
 								</p>
 									
 							</section>
