--- a/Robotics.html
+++ b/Robotics.html
@@ -64,10 +64,19 @@
 									
 									The project led to a patent application submission and we are currently preparing a research article for publication. This experience provided me with valuable hands-on exposure to robotics,
 									 servo control, Arduino programming, and machine learning, while enhancing my teamwork, problem-solving, and practical application skills in a multidisciplinary setting.<br \>
-									Here are some videos of the project: <a href="https://www.youtube.com/watch?v=87DKZ6mHQSA" target="_blank"><b>Demo 1</b></a> ,
-									<a href="https://www.youtube.com/watch?v=py64qXxQUnw", target="_blank"><b>Demo 2</b></a>.
-
+									Here are some videos of the project:
 									 </p>
+								 	  <p>Demo 1:</p>
+									 <div style = "text-align:center">	 
+										<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/py64qXxQUnw?si=uETTgZleTEMDhRZd" title="YouTube video player" frameborder="0" 
+										allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+										picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+									 </div>
+									<p>Demo 2:</p>
+									<div style="text-align: center;">
+										<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/87DKZ6mHQSA?si=6HW-CNDYumlx0Bty" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+										clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+									</div>
 								<p>In addition to the project development, our research paper on this work was presented at ISB JSB Fukuoka 2023, 
 									detailing our advancements in vision-based robotic hand control. Below is a snapshot of the published paper.	
 								</p>
