--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en" dir="ltr">
 	<head>
-		<title>Haider Khalaf Portfolio</title>
+		<title data-i18n="title"></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,6 +16,9 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
 		<link rel="manifest" href="/icons/site.webmanifest" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cairo&display=swap" rel="stylesheet">
+	
 	</head>
 	<body class="is-preload">
 
@@ -25,26 +28,34 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1 id="myHeader"></h1>
-						<p>Junior Computer Engineer skilled in full-stack development and robotics, delivering integrated hardware-software solutions. Proficient in programming, algorithms, and web technologies, with a focus on quality, collaboration, and timely results</p>
+						<p data-i18n="aboutMe"></p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly" data-i18n="Continue"></a></li>
 						</ul>
 					</div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index" class="logo">Haider Khalaf</a>
+						<a href="index" class="logo" data-i18n="myHeader"></a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index">Projects & Work Experience</a></li>
+							<li class="active"><a href="index" data-i18n="Project&WorkExperience"></a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/haider-khalaf/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">fa-linkedIn</span></a></li>
 									<li><a href="https://github.com/B7SJuba" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li>
+										<div class="language-switch" id="langSwitcher">
+											<div class="switch-ball"></div>
+											<span class="label-en">En</span>
+											<span class="label-ar">عربي</span>
+										  </div>
+									</li>
 						</ul>
+
 					</nav>
 
 				<!-- Main -->
@@ -53,15 +64,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">October 2024 - Ongoing</span>
-									<h2>AI Training Specialist</h2>
-									<p>As an AI Training Specialist at Outlier.ai, I train AI models using Reinforced Learning with Human Feedback (RLHF) to enhance decision-making and accuracy.
-										 My role involves reviewing, optimizing, and improving code in Python, C, C++, Java, Javascript, and SQL,
-										 with a focus on efficiency, error-free implementation, and maintainability.</p>
+									<span class="date" data-i18n="AiTrainingDate"></span>
+									<h2 data-i18n="AiTrainingSpecialist"></h2>
+									<p data-i18n="AiTrainingAbout"></p>
 								</header>
 								<a class="image main"><img src="images/ai-training.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="AITrainingSpecialist" class="button large">View</a></li>
+									<li><a href="AITrainingSpecialist" class="button large" data-i18n="View"></a></li>
 								</ul>
 							</article>
 
@@ -69,54 +78,46 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">February 2024 - December 2024</span>
-										<h2>SMARTAGE</h2>
+										<span class="date" data-i18n="SmartageDate"></span>
+										<h2 data-i18n="Smartage"></h2>
 									</header>
 									<a  class="image fit"><img src="images/SMARTAGE_Image.png" alt="" /></a>
-									<p>Sensor-Based Monitoring and Adaptation for Geriatric Environments in real time.<br />
-										By integrating IoT devices and machine learning models, it collects, analyzes, and responds to data, ensuring personalized and adaptive solutions that enhance the safety and well-being of elderly individuals.<br />
-										The system leverages advanced positioning algorithms and intuitive dashboards to provide seamless visualization and actionable insights, making it a robust tool for improving quality of life in geriatric settings.</p>
+									<p data-i18n="SmartageAbout"></p>
 								<ul class="actions special">
-										<li><a href="SMARTAGE" class="button">View Project</a></li>
+										<li><a href="SMARTAGE" class="button" data-i18n="ViewProject"></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">February 2023 - January 2024</span>
-										<h2>Turkish Text Summarizer</h2>
+										<span class="date" data-i18n="TurkishTextSummarizerDate"></span>
+										<h2 data-i18n="TurkishTextSummarizer"></h2>
 									</header>
 									<a class="image fit"><img src="images/NLP.png" alt="" /></a>
-									<p>Full-stack project that uses NLP techniques, including cosine similarity and PageRank, to generate concise summaries of Turkish texts.
-										It features a scalable back-end for efficient processing and an interactive front-end for user-friendly input and visualization, 
-										delivering accurate and intuitive summarization results.</p>
+									<p data-i18n="TurkishTextSummarizerAbout"></p>
 									<ul class="actions special">
-										<li><a href="TurkishTextSummarizer" class="button">View Project</a></li>
+										<li><a href="TurkishTextSummarizer" class="button" data-i18n="ViewProject"></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">February 2023 - January 2024</span>
-										<h2>Image Processing</h2>
+										<span class="date" data-i18n="ImageProcessingDate"></span>
+										<h2 data-i18n="ImageProcessing"></h2>
 									</header>
 									<a class="image fit"><img src="images/ImageProcessing.png" alt="" /></a>
-									<p>The project involved creating a tailored dataset for training machine learning models to detect and classify images. 
-										It included developing an automated sorting algorithm, enabling real-time object detection and tracking in videos, and building 
-										a comprehensive end-to-end analysis pipeline optimized for accuracy and efficiency across diverse scenarios.</p>
+									<p data-i18n="ImageProcessingAbout"></p>
 									<ul class="actions special">
-										<li><a href="ImageProcessing" class="button">View Project</a></li>
+										<li><a href="ImageProcessing" class="button" data-i18n="ViewProject"></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">February 2022 - June 2022</span>
-										<h2>Robotics</h2>
+										<span class="date" data-i18n="RoboticsDate"></span>
+										<h2 data-i18n="Robotics"></h2>
 									</header>
 									<a class="image fit"><img src="images/robotics.jpg" alt="" /></a>
-									<p>The Robotics project focused on developing a robotic hand controlled via computer vision, integrating machine learning and image processing.
-										 A novel approach was proposed to improve the efficiency of vision-based finger motion control. 
-										The work has been submitted for a patent and is set for publication as a research article.</p>
+									<p data-i18n="RoboticsAbout"></p>
 									<ul class="actions special">
-										<li><a href="Robotics" class="button">View Project</a></li>
+										<li><a href="Robotics" class="button" data-i18n="ViewProject"></a></li>
 									</ul>
 								</article>
 												</section>
@@ -126,7 +127,7 @@
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
 								<a href="#" class="page active">1</a>
-								<a class="next">Next</a>
+								<a class="next" data-i18n="Next"></a>
 									<!--
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -173,11 +174,11 @@
 								<p><a href="#">(000) 000-0000</a></p>
 							</section> -->
 							<section>
-								<h3>Email</h3>
+								<h3 data-i18n="Email"></h3>
 								<p><a onclick="copyToClipboard('HKhalaf.contact@gmail.com'); return false;">HKhalaf.contact@gmail.com</a></p>
 							</section>
 							<section>
-								<h3>Social</h3>
+								<h3 data-i18n="Social"></h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/haider-khalaf/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">fa-linkedIn</span></a></li>
 									<li><a href="https://github.com/B7SJuba" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
@@ -245,6 +246,52 @@
 				// Starting the effect
 				typingEffect();
 
+			</script>
+			<script>
+
+				// Language Switcher Logic
+
+				const switcher = document.getElementById("langSwitcher");
+				const ball = switcher.querySelector(".switch-ball");
+
+				// Get saved language or default to English
+				let lang = localStorage.getItem("lang") || "en";
+				setLanguage(lang, false);  // Set initial state without animation
+
+				// Toggle language on click
+				switcher.addEventListener("click", () => {
+					lang = lang === "en" ? "ar" : "en";
+					localStorage.setItem("lang", lang);
+					setLanguage(lang, true);
+				});
+
+				function setLanguage(langCode, animate) {
+					// Position the switch ball
+					if (animate) {
+					ball.style.transition = "left 0.3s ease";
+					} else {
+					ball.style.transition = "none";
+					}
+					ball.style.left = langCode === "ar" ? "0px" : "2px";
+
+					// Set HTML language attributes
+					document.documentElement.setAttribute("lang", langCode);
+					document.documentElement.setAttribute("dir", langCode === "ar" ? "rtl" : "ltr");
+
+					// Load translation file
+					loadLanguage(langCode);
+				}
+
+				function loadLanguage(langCode) {
+					fetch(`index_${langCode}.json`)
+					.then(res => res.json())
+					.then(data => {
+						document.querySelectorAll("[data-i18n]").forEach(el => {
+						const key = el.getAttribute("data-i18n");
+						el.textContent = data[key] || key;
+						});
+					});
+				}
 			</script>
 
 	</body>
