--- a/AITrainingSpecialist.html
+++ b/AITrainingSpecialist.html
@@ -85,7 +85,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; B7SJ</li><li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li></ul>
+						<ul><li>&copy; B7SJ</li></ul>
 					</div>
 
 			</div>
