--- a/TurkishTextSummarizer.html
+++ b/TurkishTextSummarizer.html
@@ -18,6 +18,8 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cairo&display=swap" rel="stylesheet">
+		<link rel="alternate" hreflang="en" href="https://haiderkhalaf.com/TurkishTextSummarizer/?lang=en" />
+		<link rel="alternate" hreflang="ar" href="https://haiderkhalaf.com/TurkishTextSummarizer/?lang=ar" />
 
 	</head>
 	<body class="is-preload">
@@ -156,6 +158,31 @@
 						});
 					});
 				}
+			</script>
+
+			<script>
+				document.addEventListener("DOMContentLoaded", () => {
+ 			    // Get lang parameter (default to English)
+  				const urlParams = new URLSearchParams(window.location.search);
+  				const lang = urlParams.get("lang") || "en";
+
+				// Load JSON file based on language
+				fetch(`turkishtextsummarizer_${lang}.json`)
+					.then(response => response.json())
+					.then(translations => {
+					document.querySelectorAll("[data-i18n]").forEach(el => {
+						const key = el.getAttribute("data-i18n");
+						if (translations[key]) {
+						el.textContent = translations[key];
+						}
+					});
+
+					// Set <html lang="xx"> for SEO
+					document.documentElement.lang = lang;
+					})
+					.catch(err => console.error("Error loading language file:", err));
+					});
+
 			</script>
 
 	</body>
