--- a/SMARTAGE.html
+++ b/SMARTAGE.html
@@ -165,7 +165,9 @@
 				document.addEventListener("DOMContentLoaded", () => {
  			    // Get lang parameter (default to English)
   				const urlParams = new URLSearchParams(window.location.search);
-  				const lang = urlParams.get("lang") || "en";
+				// Get saved language or default to English
+				let localLang = localStorage.getItem("lang");
+  				const lang = localLang || urlParams.get("lang");
 
 				// Load JSON file based on language
 				fetch(`smartage_${lang}.json`)
