--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 				
 				// Get saved language or default to English
 				let localLang = localStorage.getItem("lang");
-  				const lang = localLang || urlParams.get("lang");
+  				const lang =  urlParams.get("lang") || localLang ;
 
 
 				// Load JSON file based on language
