Direction fix for Arabic content

--- a/index.html
+++ b/index.html
@@ -324,6 +324,10 @@
 					.catch(err => console.error("Error loading language file:", err));
 					});
 
+					// Set HTML language attributes
+					document.documentElement.setAttribute("lang", lang);
+					document.documentElement.setAttribute("dir", lang === "ar" ? "rtl" : "ltr");
+
 			</script>
 
 	</body>
