--- a/SMARTAGE.html
+++ b/SMARTAGE.html
@@ -186,6 +186,9 @@
 					.catch(err => console.error("Error loading language file:", err));
 					});
 
+					// Set HTML language attributes
+					document.documentElement.setAttribute("lang", lang);
+					document.documentElement.setAttribute("dir", lang === "ar" ? "rtl" : "ltr");
 			</script>
 
 	</body>
