Cleaned some bugs

--- a/AITrainingSpecialist.html
+++ b/AITrainingSpecialist.html
@@ -18,8 +18,8 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cairo&display=swap" rel="stylesheet">
-		<link rel="alternate" hreflang="en" href="https://haiderkhalaf.com/AiTrainingSpecialist/?lang=en" />
-		<link rel="alternate" hreflang="ar" href="https://haiderkhalaf.com/AiTrainingSpecialist/?lang=ar" />
+		<link rel="alternate" hreflang="en" href="https://haiderkhalaf.com/AITrainingSpecialist/?lang=en" />
+		<link rel="alternate" hreflang="ar" href="https://haiderkhalaf.com/AITrainingSpecialist/?lang=ar" />
 
 	</head>
 	<body class="is-preload">
@@ -157,7 +157,8 @@
 						});
 					});
 				}
-			</script>s
+			</script>
+			
 			<script>
 				document.addEventListener("DOMContentLoaded", () => {
  			    // Get lang parameter (default to English)
@@ -181,7 +182,9 @@
 					.catch(err => console.error("Error loading language file:", err));
 					});
 
-			</script><script>
+			</script>
+			
+			<script>
 				document.addEventListener("DOMContentLoaded", () => {
  			    // Get lang parameter (default to English)
   				const urlParams = new URLSearchParams(window.location.search);
