--- a/Robotics.html
+++ b/Robotics.html
@@ -18,8 +18,8 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cairo&display=swap" rel="stylesheet">
-		<link rel="alternate" hreflang="en" href="https://haiderkhalaf.com/Robotics/?lang=en" />
-		<link rel="alternate" hreflang="ar" href="https://haiderkhalaf.com/Robotics/?lang=ar" />
+		<link rel="alternate" hreflang="en" href="https://haiderkhalaf.com/Robotics?lang=en" />
+		<link rel="alternate" hreflang="ar" href="https://haiderkhalaf.com/Robotics?lang=ar" />
 
 		<style>
 			.video-container {
