--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cairo&display=swap" rel="stylesheet">
 		<link rel="alternate" hreflang="en" href="https://haiderkhalaf.com/?lang=en" />
 		<link rel="alternate" hreflang="ar" href="https://haiderkhalaf.com/?lang=ar" />
-
+		<link rel="alternate" hreflang="ar" href="https://haiderkhalaf.com/?lang=tr" />
 	
 	</head>
 	<body class="is-preload">
@@ -50,14 +50,24 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/haider-khalaf/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">fa-linkedIn</span></a></li>
 									<li><a href="https://github.com/B7SJuba" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									<li>
-										<div class="language-switch" id="langSwitcher">
-											<div class="switch-ball"></div>
-											<span class="label-en">En</span>
-											<span class="label-ar">عربي</span>
-										  </div>
+									<li class="language-switch-list">
+										
+											<select id="langSwitcherList">
+												<option class="language-switch-list" value="en">English</option>
+												<option class="language-switch-list" value="ar">عربي</option>
+												<option class="language-switch-list" value="tr">Türkçe</option>
+											</select>
 									</li>
 						</ul>
+
+						<!--
+						Switcher with ball for two languages. 
+						<div class="language-switch" id="langSwitcher">
+							<div class="switch-ball"></div>
+							<span class="label-en">En</span>
+							<span class="label-ar">عربي</span>
+						</div>
+						-->
 
 					</nav>
 
@@ -216,6 +226,60 @@
 						});
 				}
 			</script>
+
+			<script>
+				// Language Switcher Logic (List)
+
+				document.addEventListener("DOMContentLoaded", function () {
+				const langSwitcher = document.getElementById("langSwitcherList");
+
+				// Get saved language from localStorage (default to 'en')
+				let savedLang = localStorage.getItem("lang") || "en";
+
+				// Set dropdown to saved language
+				langSwitcher.value = savedLang;
+
+				// Update page language and load translations
+				setLanguage(savedLang);
+				loadLanguage(savedLang);
+
+				// Listen for user selection
+				langSwitcher.addEventListener("change", function () {
+					let selectedLang = this.value;
+					localStorage.setItem("lang", selectedLang); // save
+					setLanguage(selectedLang);
+					loadLanguage(selectedLang);
+				});
+
+				function setLanguage(lang) {
+					document.documentElement.setAttribute("lang", lang);
+					document.documentElement.setAttribute("dir", lang === "ar" ? "rtl" : "ltr");
+				}
+
+				// Load translation file and replace text
+				function loadLanguage(langCode) {
+					fetch(`index_${langCode}.json`)
+					.then(res => res.json())
+					.then(data => {
+						document.querySelectorAll("[data-i18n]").forEach(el => {
+						const key = el.getAttribute("data-i18n");
+						if (data[key]) {
+							// Handle innerHTML for values with tags (like links <a>)
+							if (/<[a-z][\s\S]*>/i.test(data[key])) {
+							el.innerHTML = data[key];
+							} else {
+							el.textContent = data[key];
+							}
+						}
+						});
+					})
+					.catch(err => console.error("Error loading translation:", err));
+				}
+				});
+
+			</script>
+
+
 			<script>
 				const txt = "HAIDER KHALAF";
 				let i = 0;
@@ -250,9 +314,10 @@
 				typingEffect();
 
 			</script>
+<!--		
 			<script>
 
-				// Language Switcher Logic
+				// Language Switcher Logic (Ball)
 
 				const switcher = document.getElementById("langSwitcher");
 				const ball = switcher.querySelector(".switch-ball");
@@ -296,7 +361,7 @@
 					});
 				}
 			</script>
-
+-->
 			<script>
 				document.addEventListener("DOMContentLoaded", () => {
  			    // Get lang parameter (default to English)
