Missing Header in Index page
Fixed SMARTAGE not showing up on index page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								<article>
 									<header>
 										<span class="date" data-i18n="SmartageDate"></span>
-										<h2 data-i18n="Smartage"></h2>
+										<h2 data-i18n="SMARTAGE"></h2>
 									</header>
 									<a  class="image fit"><img src="images/SMARTAGE_Image.png" alt="" /></a>
 									<p data-i18n="SmartageAbout"></p>
