Added Custom Loader
The addition of custom loader to each webpage

--- a/SMARTAGE.html
+++ b/SMARTAGE.html
@@ -24,6 +24,11 @@
 	</head>
 	<body class="is-preload">
 
+		<!-- Loader -->
+		<div class="loader">
+			<img src="images/loadingBlack.gif" alt="">
+		</div>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -112,6 +117,14 @@
 							console.error('Could not copy text: ', err);
 						});
 				}
+			</script>
+
+			<script>
+				// Loader Script 
+				window.addEventListener("load", function() {
+					const loader = document.querySelector(".loader");
+					loader.className += " hidden"; // Adding hidden to loader class to hide it
+				}) 
 			</script>
 			
 			<script>
