--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 	</head>
 	<body class="is-preload">
 
+		<!-- Loader -->
+		<div class="loader">
+			<img src="images/loadingBlack.gif" alt="">
+		</div>
+
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
@@ -215,7 +220,9 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			
 			<script>
+			// Copy email 	
 				function copyToClipboard(text) {
 					navigator.clipboard.writeText(text)
 						.then(() => {
@@ -225,6 +232,14 @@
 							console.error('Could not copy text: ', err);
 						});
 				}
+			</script>
+
+			<script>
+				// Loader Script 
+				window.addEventListener("load", function() {
+					const loader = document.querySelector(".loader");
+					loader.className += " hidden"; // Adding hidden to loader class to hide it
+				}) 
 			</script>
 
 			<script>
