Adjustment to URL Query
Adjusted querying the language using the URL, to make the typing effect responds accordingly to the queried language. Adjust the switcher as well, to represent the the queried language correctly.

--- a/AITrainingSpecialist.html
+++ b/AITrainingSpecialist.html
@@ -184,6 +184,11 @@
   				const lang =  urlParams.get("lang") || localLang ;
 				console.log(lang);
 
+				// To adjust the language switcher value
+				let switcherLanguage = document.getElementById("langSwitcherList");			
+				switcherLanguage.value = lang;
+	
+
 				// Load JSON file based on language
 				fetch(`aitrainingspecialist_${lang}.json`)
 					.then(response => response.json())
