--- a/ImageProcessing.html
+++ b/ImageProcessing.html
@@ -186,6 +186,10 @@
   				const lang =  urlParams.get("lang") || localLang ;
 				console.log(lang);
 
+				// To adjust the language switcher value
+				let switcherLanguage = document.getElementById("langSwitcherList");			
+				switcherLanguage.value = lang;
+
 				// Load JSON file based on language
 				fetch(`imageprocessing_${lang}.json`)
 					.then(response => response.json())
