--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 							<li class="active"><a href="index" data-i18n="Project&WorkExperience"></a></li>
 						</ul>
 						<ul class="icons">
+							<li style="text-align: center; margin-top: 0px;">
+								<img src="https://hitscounter.dev/api/hit?url=haiderkhalaf.com&label=Visitors&icon=file-earmark-person-fill&color=%23fff&message=&style=social&tz=localtime" 
+									alt="visitor counter" class="visitor-counter">
+							</li>
 							<li><a href="https://www.linkedin.com/in/haider-khalaf/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">fa-linkedIn</span></a></li>
 									<li><a href="https://github.com/B7SJuba" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 									<li class="language-switch-list">
@@ -59,6 +63,7 @@
 												<option class="language-switch-list" value="tr">Türkçe</option>
 											</select>
 									</li>
+									
 						</ul>
 
 						<!--
