--- a/ImageProcessing.html
+++ b/ImageProcessing.html
@@ -41,6 +41,10 @@
 
 						</ul>
 						<ul class="icons">
+							<li style="text-align: center; margin-top: 0px;">
+								<img src="https://hitscounter.dev/api/hit?url=haiderkhalaf.com&label=Visitors&icon=file-earmark-person-fill&color=%23fff&message=&style=social&tz=localtime" 
+									alt="visitor counter" class="visitor-counter">
+							</li>
 							<li><a href="https://www.linkedin.com/in/haider-khalaf/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">fa-linkedIn</span></a></li>
 							<li><a href="https://github.com/B7SJuba" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li class="language-switch-list">		
