--- a/Robotics.html
+++ b/Robotics.html
@@ -42,6 +42,14 @@
 			<img src="images/loadingBlack.gif" alt="">
 		</div>
 
+
+		<!-- Background Video & Dark Overlay -->
+		<video autoplay muted loop id="video-background">
+		<source src="images/coding-background.mp4" type="video/mp4">
+		</video>
+		<div class="overlay-text"></div>
+		
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -111,7 +119,7 @@
 								<p data-i18n="ThirdArticle"></p>
 								<div class="image main"><img src="Research/Robotics/RoboticsResearch.png" alt=""/></div>
 								<p id="FourthArticle" data-i18n="FourthArticle"></p>
-								<p><a href='Research/Robotics/ISB_JSB2023_Program_Abstract_Book.pdf' target='_blank'><b>ISB JSB Fukuoka 2023 Program & Abstract Book</b></a>.</p>
+								<p><a href='Research/Robotics/ISB_JSB2023_Program_Abstract_Book.pdf' target='_blank'><b style="color: white;">ISB JSB Fukuoka 2023 Program & Abstract Book</b></a>.</p>
 									
 							</section>
 
