--- a/SMARTAGE.html
+++ b/SMARTAGE.html
@@ -25,6 +25,14 @@
 			<img src="images/loadingBlack.gif" alt="">
 		</div>
 
+
+		<!-- Background Video & Dark Overlay -->
+		<video autoplay muted loop id="video-background">
+		<source src="images/coding-background.mp4" type="video/mp4">
+		</video>
+		<div class="overlay-text"></div>
+		
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -69,7 +77,7 @@
 								</header>
 								<div class="image main"><img src="images/SMARTAGE_Image.png" alt="" /></div>
 								<p data-i18n="SecondArticle"></p>
-									<p><a href="https://www.linkedin.com/posts/isibor-kennedy-ihianle-phd-mbcs-fhea-769a288_activityrecognition-ai-ntu-ugcPost-7205867165407703040-5HeN?utm_source=share&utm_medium=member_desktop" target="_blank"><b>Smartage Demo</b></a></p>
+									<p><a href="https://www.linkedin.com/posts/isibor-kennedy-ihianle-phd-mbcs-fhea-769a288_activityrecognition-ai-ntu-ugcPost-7205867165407703040-5HeN?utm_source=share&utm_medium=member_desktop" target="_blank"><b style="color: white;">Smartage Demo</b></a></p>
 							</section>
 
 					</div>
