--- a/TurkishTextSummarizer.html
+++ b/TurkishTextSummarizer.html
@@ -25,6 +25,14 @@
 			<img src="images/loadingBlack.gif" alt="">
 		</div>
 
+
+		<!-- Background Video & Dark Overlay -->
+		<video autoplay muted loop id="video-background">
+		<source src="images/coding-background.mp4" type="video/mp4">
+		</video>
+		<div class="overlay-text"></div>
+		
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -68,7 +76,7 @@
 								</header>
 								<div class="image main"><img src="images/NLP.png" alt="" /></div>
 								<p data-i18n="SecondArticle"></p>
-								<p><a href="https://github.com/B7SJuba/TurkishTextSummarizer" target="_blank"><b>Turkish Text Summarizer repository</b></a></p>
+								<p><a href="https://github.com/B7SJuba/TurkishTextSummarizer" target="_blank"><b style="color: white;">Turkish Text Summarizer repository</b></a></p>
 							</section>
 
 					</div>
