--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
 			<img src="images/loadingBlack.gif" alt="">
 		</div>
 
+		
+		<!-- Background Video & Dark Overlay -->
+		<video autoplay muted loop id="video-background">
+		<source src="images/coding-background.mp4" type="video/mp4">
+		</video>
+		<div class="overlay-text"></div>
+		
+
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+			<div id="wrapper" class="fade-ins">
 
 				<!-- Intro -->
 					<div id="intro">
@@ -212,7 +220,7 @@
 					</div>
 
 			</div>
-
+			
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
