--- a/AITrainingSpecialist.html
+++ b/AITrainingSpecialist.html
@@ -25,6 +25,13 @@
 			<img src="images/loadingBlack.gif" alt="">
 		</div>
 
+		<!-- Background Video & Dark Overlay -->
+		<video autoplay muted loop id="video-background">
+		<source src="images/coding-background.mp4" type="video/mp4">
+		</video>
+		<div class="overlay-text"></div>
+		
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
